--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
 					<nav id="nav">
 						<ul>
 							<li><a href="#intro" class="active">Introduction</a></li>
-							<li><a href="#first">First Section</a></li>
-							<li><a href="#second">Second Section</a></li>
-							<li><a href="#cta">Get Started</a></li>
+							<li><a href="#first">Examples of works</a></li>
+							<li><a href="#second">Skills</a></li>
+							<li><a href="#cta">Social</a></li>
 						</ul>
 					</nav>
 
@@ -43,7 +43,7 @@
 								<div class="spotlight">
 									<div class="content">
 										<header class="major">
-											<h2>Ipsum sed adipiscing</h2>
+											<h2>Introduction</h2>
 										</header>
 										<p>Sed lorem ipsum dolor sit amet nullam consequat feugiat consequat magna
 										adipiscing magna etiam amet veroeros. Lorem ipsum dolor tempus sit cursus.
@@ -56,10 +56,10 @@
 								</div>
 							</section>
 
-						<!-- First Section -->
+						<!-- examples of work -->
 							<section id="first" class="main special">
 								<header class="major">
-									<h2>Magna veroeros</h2>
+									<h2>Examples of work</h2>
 								</header>
 								<ul class="features">
 									<li>
@@ -85,12 +85,12 @@
 								</footer>
 							</section>
 
-						<!-- Second Section -->
+						<!-- skills -->
 							<section id="second" class="main special">
 								<header class="major">
-									<h2>Ipsum consequat</h2>
-									<p>Donec imperdiet consequat consequat. Suspendisse feugiat congue<br />
-									posuere. Nulla massa urna, fermentum eget quam aliquet.</p>
+									<h2>Skills</h2>
+									<h3>Skills gained from education</h3>
+									<p>Games development, Game theory, C# programing, OO programing, unity, unity colab, unity AI implimentation, unity oculus vr intergration, VR games dev, Cyber Security, Cloud computing.</p>
 								</header>
 								<ul class="statistics">
 									<li class="style1">
@@ -122,10 +122,10 @@
 								</footer>
 							</section>
 
-						<!-- Get Started -->
+						<!-- social -->
 							<section id="cta" class="main special">
 								<header class="major">
-									<h2>Congue imperdiet</h2>
+									<h2>Social</h2>
 									<p>Donec imperdiet consequat consequat. Suspendisse feugiat congue<br />
 									posuere. Nulla massa urna, fermentum eget quam aliquet.</p>
 								</header>
