--- a/index.html
+++ b/index.html
@@ -91,6 +91,8 @@
 									<h2>Skills</h2>
 									<h3>Skills gained from education</h3>
 									<p>Games development, Game theory, C# programing, OO programing, unity, unity colab, unity AI implimentation, unity oculus vr intergration, VR games dev, Cyber Security, Cloud computing.</p>
+									<h3>Skills gained from/ renforced by Self study and practice</h3>
+									<p>Mobile games development, VR game dev,  </p>
 								</header>
 								<ul class="statistics">
 									<li class="style1">
