--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 									<h3>Skills gained from education</h3>
 									<p>Games development, Game theory, C# programing, OO programing, unity, unity colab, unity AI implimentation, unity oculus vr intergration, VR games dev, Cyber Security, Cloud computing.</p>
 									<h3>Skills gained from/ renforced by Self study and practice</h3>
-									<p>Mobile games development, VR game dev,  </p>
+									<p>Mobile games development, VR game dev, unity, OO programing  </p>
 								</header>
 								<ul class="statistics">
 									<li class="style1">
@@ -101,7 +101,7 @@
 									</li>
 									<li class="style2">
 										<span class="icon fa-folder-open"></span>
-										<strong>8,192</strong> Magna
+										<strong>8,192</strong> Green
 									</li>
 									<li class="style3">
 										<span class="icon solid fa-signal"></span>
