--- a/index.html
+++ b/index.html
@@ -90,9 +90,12 @@
 								<header class="major">
 									<h2>Skills</h2>
 									<h3>Skills gained from education</h3>
-									<p>Games development, Game theory, C# programing, OO programing, unity, unity colab, unity AI implimentation, unity oculus vr intergration, VR games dev, Cyber Security, Cloud computing.</p>
+									<p>Games development, Game theory, C# programing, OO programing, Unity, Unity colab, Unity AI implimentation, Unity oculus vr intergration, VR games dev, Computer matiance, Cyber Security, Cloud computing.</p>
 									<h3>Skills gained from/ renforced by Self study and practice</h3>
-									<p>Mobile games development, VR game dev, unity, OO programing  </p>
+									<p>Mobile games development, VR game dev, Unity, OO programing, Server creation/ matiance, Computer matiance, Blender/ modeling, animation. </p>
+									<h3>Genral Skills</h3>
+									<p>Practical, Creative, Resoursefull, Clean code practice, Persistant</p>
+
 								</header>
 								<ul class="statistics">
 									<li class="style1">
