--- a/index.html
+++ b/index.html
@@ -45,9 +45,7 @@
 										<header class="major">
 											<h2>Introduction</h2>
 										</header>
-										<p>Sed lorem ipsum dolor sit amet nullam consequat feugiat consequat magna
-										adipiscing magna etiam amet veroeros. Lorem ipsum dolor tempus sit cursus.
-										Tempus nisl et nullam lorem ipsum dolor sit amet aliquam.</p>
+										<p>Hello and welcome to my (Matthew W Sale) portfolio. THis is where I show case what I've done, and list some of my skills. Click on Learn more to find out more about me and what I do.</p>
 										<ul class="actions">
 											<li><a href="generic.html" class="button">Learn More</a></li>
 										</ul>
