--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 				<!-- Header -->
 					<header id="header" class="alt">
-						<span class="logo"><img src="images/logo.svg" alt="" /></span>
+						<span class="logo"><img src="images/1j+ojFVDOMkX9Wytexe43D6kif6ApBVHmxnIwXs1M3EMoAJtliAqjvNp9v07.png" alt="" /></span>
 						<h1>Matthew Sale</h1>
 						<h2>welcom to my portfolio</h2>
 						<p>c# // games dev // VR dev //unity dev</p>
