--- a/index.html
+++ b/index.html
@@ -59,25 +59,12 @@
 								<header class="major">
 									<h3>Examples of work</h3>
 									<h2>Your in a forest</h2>
-										<p>Your in a forest is a mobial game with heavy insparation from the first evergames made. however instead of a black scree that takes text input only it features defined and clear options, sounds and visuals updating the classic consept of a text adventure into moden day standard. the game works on android phones and is avalible for free at https://l.messenger.com/l.php?u=https%3A%2F%2Fplay.google.com%2Fstore%2Fapps%2Fdetails%3Fid%3Dcom.RelevantStudios.Youreinaforest&h=AT3fW-qm_yPbn5FTaGJivWgg58Y0VmeQJZSxD2igEBwnN9HIFsfNPN6IM4AUwejOSL9T09kL6NDrAHWWW3YgDuuILWv5cDRYxgcx6qiptBib-PRET5xMjDudmKojpnWwh_IchgWdfKcF2k0 on the google play store</p>
-
+										<p>Your in a forest is a mobial game with heavy insparation from the first evergames made. however instead of a black scree that takes text input only it features defined and clear options, sounds and visuals updating the classic consept of a text adventure into moden day standard. the game works on android phones and is avalible for free at http://bit.ly/3mnhiFv</p>
+									<h2>The wizard VR (Pending)</h2>
+									<p>The wizard VR was a game made while i was at collage, it was an assest peice of work scoring 97/100, Now a new game with the same title and same concepts is being developed, A demo was going to be releaced for the oculus rift in 2020. However due to some desisions made by oculus the demos being pushed back so it is compatable with all VR headsets.</p>
 								</header>
 								<ul class="features">
-									<li>
-										<span class="icon solid major style1 fa-code"></span>
-										<h3>Ipsum consequat</h3>
-										<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros sed consequat.</p>
-									</li>
-									<li>
-										<span class="icon major style3 fa-copy"></span>
-										<h3>Amed sed feugiat</h3>
-										<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros sed consequat.</p>
-									</li>
-									<li>
-										<span class="icon major style5 fa-gem"></span>
-										<h3>Dolor nullam</h3>
-										<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros sed consequat.</p>
-									</li>
+									
 								</ul>
 								<footer class="major">
 									<ul class="actions special">
