--- a/generic.html
+++ b/generic.html
@@ -28,7 +28,7 @@
 
 						<!-- Content -->
 							<section id="content" class="main">
-								<span class="image main"><img src="images/pic04.jpg" alt="" /></span>
+								<span class="image main"><img src="images/mainpic.jpg" alt="" /></span>
 								<h2>Who am I?</h2>
 								<p>My name is Matthew Sale. I was born (29,04,2001) and raised in england, spesificaly the westmidlens,</p>
 								<p>My hobbies inclide baking, developing games, playing games and edigting vidios/p>
