--- a/generic.html
+++ b/generic.html
@@ -30,8 +30,8 @@
 							<section id="content" class="main">
 								<span class="image main"><img src="images/mainpic.jpg" alt="" /></span>
 								<h2>Who am I?</h2>
-								<p>My name is Matthew Sale. I was born (29,04,2001) and raised in england, spesificaly the westmidlens,</p>
-								<p>My hobbies inclide baking, developing games, playing games and edigting vidios/p>
+								<p>My name is Matthew Sale. I was born (29,04,2001) and raised in england, spesificaly the westmidlens, there i went to the meadows primary, waseley hills high school and Halesowen collage. I am currently studying Games development at Staffordshire university</p>
+								<p>My hobbies inclide baking, developing games, playing games and edigting vidios</p>
 								<h2>Best way to conctact me?</h2>
 								<p>The best way to conctact me is by emailing me at matt29sale@gmail.com, however any of the social media links will work.</p>
 							</section>
