--- a/index.html
+++ b/index.html
@@ -98,7 +98,11 @@
 							<section id="cta" class="main special">
 								<header class="major">
 									<h2>Social</h2>
+									<p>Linkedin: https://twitter.com/MatthewSale19</p>
+									<p>Linkedin: https://www.facebook.com/matthew.sale.58152</p>
+									<p>Linkedin: https://matthewsale.github.io/MyPortfolio/</p>
 									<p>Linkedin: https://bit.ly/3mmnSfx.</p>
+									
 								</header>
 								<footer class="major">
 									<ul class="actions special">
